<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_settings"
        android:title="Preferences">

        <!-- toast check box-->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_toast"
            android:summary="@string/pref_toast_summary"
            android:title="@string/pref_toast_title" />

        <!-- notification check box-->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_notification"
            android:summary="@string/pref_notification_summary"
            android:title="@string/pref_notification_title" />


    </PreferenceCategory>

</PreferenceScreen>