<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.aleph.android.example13.activities.activity.FirstActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_second"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <!-- name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/label_name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_realestate_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </LinearLayout>


        <!-- description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/label_description"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_realestate_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </LinearLayout>


        <!-- picture -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_pictures"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/picture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp" />


        </LinearLayout>


        <!-- address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/label_address"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_realestate_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </LinearLayout>


        <!-- phone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/label_phone"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_realestate_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="call"
                android:textSize="16dp" />

        </LinearLayout>


        <!-- square -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/label_square"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_realestate_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </LinearLayout>


        <!-- Nr. rooms -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/label_rooms"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_realestate_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </LinearLayout>


        <!-- price -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/label_price"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_realestate_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </LinearLayout>

        <!-- btn tour -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimaryDark"
            app:fabSize="normal"
            app:rippleColor="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_menu_add" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>